update base README to better describe jAER